cabal-version:      3.0
name:               wireform
version:            0.1.0.0
synopsis:           High-performance multi-format serialization toolkit for Haskell
description:
  A comprehensive binary serialization library supporting 25+ formats.
  .
  This is the umbrella package.  It re-exports the public API of each
  format through @Wireform.*@ convenience modules and provides the
  @wireform-gen@ multi-format code-generation CLI.
  .
  Individual format packages (e.g. @wireform-proto@, @wireform-html@)
  can be depended on directly when you only need one format.

license:            BSD-3-Clause
license-file:       LICENSE
author:             Ian Duncan
maintainer:         ian@iankduncan.com
copyright:          2026 Ian Duncan
category:           Data, Codec, Serialization
homepage:           https://github.com/iand675/wireform-
bug-reports:        https://github.com/iand675/wireform-/issues
build-type:         Simple
tested-with:        GHC == 9.6.4, GHC == 9.8.4
extra-doc-files:
  CHANGELOG.md
  docs/README.md
  docs/getting-started.md

data-files:
  proto/google/protobuf/any.proto
  proto/google/protobuf/api.proto
  proto/google/protobuf/duration.proto
  proto/google/protobuf/empty.proto
  proto/google/protobuf/field_mask.proto
  proto/google/protobuf/source_context.proto
  proto/google/protobuf/struct.proto
  proto/google/protobuf/timestamp.proto
  proto/google/protobuf/type.proto
  proto/google/protobuf/wrappers.proto

data-dir: .

source-repository head
  type:     git
  location: https://github.com/iand675/wireform-

flag python-interop
  description: Enable Python interop conformance tests (requires python3, protobuf pip package, protoc)
  manual: True
  default: False

flag profile
  description: Emit cost-centre annotations on the profile-rewriter
               binary (requires building the dep closure with
               --enable-profiling).
  manual: True
  default: False

flag dataframe-bridge
  description: Build the example-dataframe-bridge executable, which
               writes a Parquet file with wireform-parquet and reads
               it back through the dataframe library
               (https://hackage.haskell.org/package/dataframe). The
               dataframe dep tree is large (cassava, attoparsec,
               regex-tdfa, snappy-hs, zstd, zlib, granite,
               vector-algorithms, ...), so it is opt-in to keep the
               default `cabal build all` lean.
  manual: True
  default: False

common defaults
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -O2
  default-language: GHC2021
  default-extensions:
    StrictData
    DerivingStrategies
    DeriveGeneric
    DeriveAnyClass
    OverloadedStrings
    LambdaCase

library
  import: defaults
  hs-source-dirs: facade
  exposed-modules:
    Wireform.Proto
    Wireform.Avro
    Wireform.Thrift
    Wireform.CBOR
    Wireform.MsgPack
    Wireform.BSON
    Wireform.Ion
    Wireform.CapnProto
    Wireform.FlatBuffers
    Wireform.Bond
    Wireform.ASN1
    Wireform.XML
    Wireform.HTML
    Wireform.Columnar
    Wireform.Parquet
    Wireform.Arrow
    Wireform.ORC
    Wireform.Iceberg
    Wireform.EDN
    Wireform.Bencode
    Wireform.TOML
    Wireform.YAML
    Wireform.CSV
    Wireform.NDJSON
    Wireform.Fory
    Wireform.Kafka
  other-modules:
    Paths_wireform
  autogen-modules: Paths_wireform
  build-depends:
      base                >= 4.16 && < 5
    , wireform-core
    , wireform-columnar
    , wireform-proto
    , wireform-avro
    , wireform-thrift
    , wireform-cbor
    , wireform-msgpack
    , wireform-bson
    , wireform-ion
    , wireform-capnproto
    , wireform-flatbuffers
    , wireform-bond
    , wireform-asn1
    , wireform-xml
    , wireform-html
    , wireform-parquet
    , wireform-arrow
    , wireform-orc
    , wireform-iceberg
    , wireform-edn
    , wireform-bencode
    , wireform-toml
    , wireform-yaml
    , wireform-csv
    , wireform-ndjson
    , wireform-fory
    , wireform-kafka
    , bytestring
    , text
    , vector

-- Multi-format code generation CLI
executable wireform-gen
  import: defaults
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
      base                   >= 4.16 && < 5
    , wireform-proto
    , wireform-avro
    , wireform-thrift
    , wireform-bond
    , wireform-capnproto
    , wireform-flatbuffers
    , wireform-asn1
    , wireform-xml
    , text
    , containers
    , vector
    , directory
    , filepath
    , optparse-applicative   >= 0.17 && < 0.20

-- Protobuf conformance test runner
executable wireform-conformance
  import: defaults
  main-is: Main.hs
  hs-source-dirs: conformance
  build-depends:
      base >= 4.16 && < 5
    , wireform-proto

-- protoc plugin
executable protoc-gen-wireform
  import: defaults
  main-is: Main.hs
  hs-source-dirs: protoc-plugin
  build-depends:
      base >= 4.16 && < 5
    , wireform-proto
    , containers
    , text
    , vector

-- Well-known type code generator
executable gen-wkt
  import: defaults
  main-is: Main.hs
  hs-source-dirs: gen-wkt
  build-depends:
      base >= 4.16 && < 5
    , wireform-proto
    , containers
    , text
    , directory
    , filepath

-- Profiling harness
executable profile
  import: defaults
  main-is: Main.hs
  ghc-options: -O2 -rtsopts
  hs-source-dirs: profile
  build-depends:
      base >= 4.16 && < 5
    , wireform-proto
    , bytestring
    , text
    , vector

------------------------------------------------------------------------
-- Test suites
------------------------------------------------------------------------

test-suite wireform-test
  import: defaults
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
    Test.Thrift
    Test.Avro
    Test.CBOR
    Test.MsgPack
    Test.BSON
    Test.Ion
    Test.CapnProto
    Test.FlatBuffers
    Test.Iceberg
    Test.Bond
    Test.ASN1
    Test.Parquet
    Test.Arrow
    Test.Arrow.FlatBufferProperties
    Test.Arrow.Record
    Test.Arrow.RecordProperties
    Test.Arrow.RecordTHTypes
    Test.Columnar
    Test.Columnar.Gen
    Test.Columnar.Properties
    Test.EDN
    Test.MsgPackRPC
    Test.CBORDiagnostic
    Test.Streaming
    Test.Class
    Test.AvroContainer
    Test.ThriftParser
    Test.AvroSchemaParse
    Test.BondParser
    Test.AvroCodeGen
    Test.ThriftCodeGen
    Test.BondCodeGen
    Test.CapnProtoCodeGen
    Test.FlatBuffersCodeGen
    Test.ASN1CodeGen
    Test.CDDLCodeGen
    Test.ISLCodeGen
    Test.CapnProtoParser
    Test.FlatBuffersParser
    Test.ASN1Parser
    Test.CDDLParser
    Test.ISLParser
    Test.AvroIDL
    Test.Registry
    Test.XML
    Test.Bencode
    Test.TOML
    Test.HTML
    Test.CSV
    Test.NDJSON
    Test.ORC
  build-depends:
      base                 >= 4.16 && < 5
    , wireform
    , wireform-core
    , wireform-proto
    , wireform-avro
    , wireform-thrift
    , wireform-cbor
    , wireform-msgpack
    , wireform-bson
    , wireform-ion
    , wireform-capnproto
    , wireform-flatbuffers
    , wireform-bond
    , wireform-asn1
    , wireform-xml
    , wireform-html
    , wireform-parquet
    , wireform-arrow
    , wireform-orc
    , wireform-iceberg
    , wireform-edn
    , wireform-bencode
    , wireform-toml
    , wireform-yaml
    , wireform-csv
    , wireform-ndjson
    , bytestring
    , containers
    , text
    , vector
    , aeson
    , hashable
    , unordered-containers
    , time
    , filepath
    , directory
    , hedgehog             >= 1.0  && < 1.5
    , tasty                >= 1.4  && < 1.6
    , tasty-hedgehog       >= 1.0  && < 1.5
    , tasty-hunit          >= 0.10 && < 0.11
    , stm
    , primitive
  hs-source-dirs: test

test-suite conformance-self-test
  import: defaults
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test-conformance
  build-depends:
      base >= 4.16 && < 5
    , wireform-proto
    , bytestring
    , vector

test-suite interop-test
  import: defaults
  type: exitcode-stdio-1.0
  main-is: InteropTest.hs
  hs-source-dirs: test-interop
  build-depends:
      base             >= 4.16 && < 5
    , wireform-proto
    , wireform-avro
    , wireform-bson
    , wireform-cbor
    , wireform-ion
    , wireform-msgpack
    , wireform-thrift
    , wireform-xml
    , bytestring
    , text
    , vector
    , containers
    , process          >= 1.6  && < 1.8
    , tasty            >= 1.4  && < 1.6
    , tasty-hunit      >= 0.10 && < 0.11

test-suite html5lib-test
  import: defaults
  type: exitcode-stdio-1.0
  main-is: HTML5LibTest.hs
  hs-source-dirs: test-interop
  build-depends:
      base, wireform-html, bytestring, text, vector,
      directory, filepath, tasty, tasty-hunit

test-suite html-dom-test
  import: defaults
  type: exitcode-stdio-1.0
  main-is: HTMLDOMTest.hs
  hs-source-dirs: test-interop
  build-depends:
      base, wireform-html, bytestring, text,
      tasty, tasty-hunit

test-suite wpt-selector-test
  import: defaults
  type: exitcode-stdio-1.0
  main-is: WPTSelectorTest.hs
  hs-source-dirs: test-interop
  build-depends:
      base, wireform-html, text,
      tasty, tasty-hunit

test-suite html-rewriter-test
  import: defaults
  type: exitcode-stdio-1.0
  main-is: HTMLRewriterTest.hs
  hs-source-dirs: test-interop
  build-depends:
      base, wireform-html, bytestring, text, aeson,
      tasty, tasty-hunit, directory, filepath

test-suite python-interop
  import: defaults
  type: exitcode-stdio-1.0
  main-is: PythonProtoInterop.hs
  other-modules: InteropTypes
  if !flag(python-interop)
    buildable: False
  build-depends:
      base             >= 4.16 && < 5
    , wireform-proto
    , bytestring
    , text
    , vector
    , containers
    , deepseq
    , directory
    , filepath
    , process          >= 1.6  && < 1.8
    , hedgehog         >= 1.0  && < 1.5
    , tasty            >= 1.4  && < 1.6
    , tasty-hedgehog   >= 1.0  && < 1.5
    , tasty-hunit      >= 0.10 && < 0.11
  hs-source-dirs: test-interop

test-suite temporal-codegen-test
  import: defaults
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
    Proto.Temporalio.Api.Activity.V1.Message
    Proto.Temporalio.Api.Batch.V1.Message
    Proto.Temporalio.Api.Command.V1.Message
    Proto.Temporalio.Api.Common.V1.Message
    Proto.Temporalio.Api.Deployment.V1.Message
    Proto.Temporalio.Api.Enums.V1.Activity
    Proto.Temporalio.Api.Enums.V1.BatchOperation
    Proto.Temporalio.Api.Enums.V1.CommandType
    Proto.Temporalio.Api.Enums.V1.Common
    Proto.Temporalio.Api.Enums.V1.Deployment
    Proto.Temporalio.Api.Enums.V1.EventType
    Proto.Temporalio.Api.Enums.V1.FailedCause
    Proto.Temporalio.Api.Enums.V1.Namespace
    Proto.Temporalio.Api.Enums.V1.Nexus
    Proto.Temporalio.Api.Enums.V1.Query
    Proto.Temporalio.Api.Enums.V1.Reset
    Proto.Temporalio.Api.Enums.V1.Schedule
    Proto.Temporalio.Api.Enums.V1.TaskQueue
    Proto.Temporalio.Api.Enums.V1.Update
    Proto.Temporalio.Api.Enums.V1.Workflow
    Proto.Temporalio.Api.ErrorDetails.V1.Message
    Proto.Temporalio.Api.Export.V1.Message
    Proto.Temporalio.Api.Failure.V1.Message
    Proto.Temporalio.Api.Filter.V1.Message
    Proto.Temporalio.Api.History.V1.Message
    Proto.Temporalio.Api.Namespace.V1.Message
    Proto.Temporalio.Api.Nexus.V1.Message
    Proto.Temporalio.Api.OperatorService.V1.RequestResponse
    Proto.Temporalio.Api.OperatorService.V1.Service
    Proto.Temporalio.Api.Protocol.V1.Message
    Proto.Temporalio.Api.Query.V1.Message
    Proto.Temporalio.Api.Replication.V1.Message
    Proto.Temporalio.Api.Rules.V1.Message
    Proto.Temporalio.Api.Schedule.V1.Message
    Proto.Temporalio.Api.Sdk.V1.EnhancedStackTrace
    Proto.Temporalio.Api.Sdk.V1.TaskCompleteMetadata
    Proto.Temporalio.Api.Sdk.V1.UserMetadata
    Proto.Temporalio.Api.Sdk.V1.WorkerConfig
    Proto.Temporalio.Api.Sdk.V1.WorkflowMetadata
    Proto.Temporalio.Api.TaskQueue.V1.Message
    Proto.Temporalio.Api.Update.V1.Message
    Proto.Temporalio.Api.Version.V1.Message
    Proto.Temporalio.Api.Worker.V1.Message
    Proto.Temporalio.Api.WorkflowService.V1.RequestResponse
    Proto.Temporalio.Api.WorkflowService.V1.Service
    Proto.Temporalio.Api.Workflow.V1.Message
  build-depends:
      base             >= 4.16 && < 5
    , wireform-proto
    , aeson
    , bytestring
    , containers
    , deepseq
    , hashable
    , text
    , vector
  hs-source-dirs: temporal-test
  -- The Temporal proto set generates ~50 Haskell modules totalling
  -- tens of thousands of lines; at -O2 the sum of per-module
  -- optimizations peaks around 10 GB resident. This test only
  -- verifies that the codegen output compiles + round-trips, so
  -- opt out of heavy optimization to keep CI machines under budget.
  ghc-options: -O0

------------------------------------------------------------------------
-- Benchmarks
------------------------------------------------------------------------

benchmark compare-bench
  import: defaults
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
    WireformTypes
    Proto.Bench
    Proto.Bench_Fields
  build-depends:
      base               >= 4.16 && < 5
    , wireform-core
    , wireform-proto
    , bytestring
    , text
    , vector
    , deepseq
    , criterion          >= 1.5  && < 1.7
    , proto-lens         >= 0.7  && < 0.8
    , proto-lens-runtime >= 0.7  && < 0.8
    , lens-family        >= 2.1  && < 2.2
  hs-source-dirs: compare-bench, compare-bench/gen

benchmark xml-bench
  import: defaults
  type: exitcode-stdio-1.0
  main-is: XMLBench.hs
  build-depends:
      base
    , wireform-xml
    , wireform-html
    , bytestring
    , text
    , vector
    , deepseq
    , criterion          >= 1.5 && < 1.7
    , xml-conduit        >= 1.9 && < 1.11
    , xeno               >= 0.6 && < 0.7
    , hexml              >= 0.3 && < 0.5
  hs-source-dirs: bench
  ghc-options: -O2

benchmark quick-prof
  import: defaults
  type: exitcode-stdio-1.0
  main-is: QuickProf.hs
  build-depends:
      base >= 4.16 && < 5
    , wireform-proto
    , wireform-html
    , bytestring
    , text
    , deepseq
  hs-source-dirs: bench
  ghc-options: -O2 -rtsopts

benchmark html-bench
  import: defaults
  type: exitcode-stdio-1.0
  main-is: HTMLBench.hs
  build-depends:
      base >= 4.16 && < 5
    , wireform-html
    , bytestring
    , primitive
    , text
  hs-source-dirs: bench
  ghc-options: -rtsopts

executable profile-rewriter
  import: defaults
  main-is: ProfileRewriter.hs
  build-depends:
      base >= 4.16 && < 5
    , wireform-html
    , bytestring
    , text
  hs-source-dirs: bench
  ghc-options: -rtsopts
  -- The +profile flag re-enables cost-centre generation so
  -- @+RTS -p@ produces useful output. Build with
  --
  --   cabal build exe:profile-rewriter -fprofile --enable-profiling
  --
  -- Default-off so @cabal build all@ in CI stays green
  -- (--enable-profiling requires the entire dep closure to be
  -- built with profiling libs too).
  --
  -- 'ghc-options: -prof' would be wrong here: --enable-profiling
  -- already injects -prof for us, and adding it manually trips
  -- cabal-check's portability error. -fprof-late is the only
  -- knob we actually need on top.
  if flag(profile)
    ghc-options: -fprof-late

benchmark yaml-bench
  import: defaults
  type: exitcode-stdio-1.0
  main-is: YAMLBench.hs
  build-depends:
      base               >= 4.16 && < 5
    , wireform-yaml
    , bytestring
    , text
    , deepseq
    , criterion          >= 1.5  && < 1.7
  hs-source-dirs: bench
  ghc-options: -O2

benchmark format-bench
  import: defaults
  type: exitcode-stdio-1.0
  main-is: FormatBench.hs
  build-depends:
      base             >= 4.16 && < 5
    , wireform-proto
    , wireform-avro
    , wireform-thrift
    , wireform-cbor
    , wireform-msgpack
    , wireform-bson
    , wireform-ion
    , wireform-edn
    , wireform-bencode
    , wireform-toml
    , bytestring
    , text
    , vector
    , deepseq
    , criterion        >= 1.5  && < 1.7
    , msgpack          >= 1.0  && < 1.1
    , cborg            >= 0.2  && < 0.3
  hs-source-dirs: bench
  ghc-options: -O2

------------------------------------------------------------------------
-- Examples
------------------------------------------------------------------------

executable example-basic
  import: defaults
  main-is: BasicEncodeDecode.hs
  hs-source-dirs: examples
  build-depends: base, wireform-proto, bytestring, text, deepseq

executable example-any
  import: defaults
  main-is: AnyExample.hs
  hs-source-dirs: examples
  build-depends: base, wireform-proto, bytestring, text, deepseq

executable example-wellknown
  import: defaults
  main-is: WellKnownTypes.hs
  hs-source-dirs: examples
  build-depends: base, wireform-proto, bytestring, containers, vector

executable example-codegen
  import: defaults
  main-is: ProtoCodeGen.hs
  hs-source-dirs: examples
  build-depends: base, wireform-proto, text, containers

executable example-setup-hook
  import: defaults
  main-is: ExampleSetup.hs
  hs-source-dirs: examples
  build-depends: base, wireform-proto, text

executable example-custom-repr
  import: defaults
  main-is: CustomReprExample.hs
  hs-source-dirs: examples
  build-depends: base, wireform-proto, bytestring, text, containers, aeson

executable example-extensions
  import: defaults
  main-is: ExtensionExample.hs
  hs-source-dirs: examples
  build-depends: base, wireform-proto, bytestring, text

executable example-th
  import: defaults
  main-is: THExample.hs
  hs-source-dirs: examples
  build-depends: base, wireform-proto, bytestring, text

executable example-derive
  import: defaults
  main-is: DeriveExample.hs
  hs-source-dirs: examples
  build-depends:
      base
    , wireform-derive
    , wireform-proto
    , wireform-cbor
    , wireform-msgpack
    , bytestring
    , text
    , aeson

executable example-qq
  import: defaults
  main-is: QQExample.hs
  hs-source-dirs: examples
  build-depends: base, wireform-proto, bytestring

executable example-msgpack
  import: defaults
  main-is: MsgPackExample.hs
  hs-source-dirs: examples
  build-depends: base, wireform-msgpack, bytestring, text

executable example-cbor
  import: defaults
  main-is: CBORExample.hs
  hs-source-dirs: examples
  build-depends: base, wireform-cbor, bytestring, text

executable example-avro
  import: defaults
  main-is: AvroExample.hs
  hs-source-dirs: examples
  build-depends: base, wireform-avro, bytestring, containers, vector

executable example-thrift
  import: defaults
  main-is: ThriftExample.hs
  hs-source-dirs: examples
  build-depends: base, wireform-thrift, bytestring, text

executable example-edn
  import: defaults
  main-is: EDNExample.hs
  hs-source-dirs: examples
  build-depends: base, wireform-edn, text

executable example-bson
  import: defaults
  main-is: BSONExample.hs
  hs-source-dirs: examples
  build-depends: base, wireform-bson, bytestring, text

executable example-ion
  import: defaults
  main-is: IonExample.hs
  hs-source-dirs: examples
  build-depends: base, wireform-ion, bytestring, text

executable example-capnproto
  import: defaults
  main-is: CapnProtoExample.hs
  hs-source-dirs: examples
  build-depends: base, wireform-capnproto, bytestring, vector

executable example-flatbuffers
  import: defaults
  main-is: FlatBuffersExample.hs
  hs-source-dirs: examples
  build-depends: base, wireform-flatbuffers, bytestring, vector

executable example-iceberg
  import: defaults
  main-is: IcebergExample.hs
  hs-source-dirs: examples
  build-depends: base, wireform-iceberg, bytestring, containers, vector, aeson

executable example-iceberg-pipeline
  import: defaults
  main-is: IcebergPipeline.hs
  hs-source-dirs: examples
  build-depends:
      base
    , wireform-iceberg
    , wireform-parquet
    , wireform-avro
    , bytestring
    , containers
    , vector

executable example-bond
  import: defaults
  main-is: BondExample.hs
  hs-source-dirs: examples
  build-depends: base, wireform-bond, bytestring, vector

executable example-asn1
  import: defaults
  main-is: ASN1Example.hs
  hs-source-dirs: examples
  build-depends: base, wireform-asn1, bytestring, vector

executable example-parquet
  import: defaults
  main-is: ParquetExample.hs
  hs-source-dirs: examples
  build-depends: base, wireform-parquet, bytestring, vector

executable example-arrow
  import: defaults
  main-is: ArrowExample.hs
  hs-source-dirs: examples
  build-depends: base, wireform-arrow, bytestring, vector

executable example-protobuf
  import: defaults
  main-is: ProtobufExample.hs
  hs-source-dirs: examples
  build-depends: base, wireform-core, wireform-proto, bytestring

executable example-xml
  import: defaults
  main-is: XMLExample.hs
  hs-source-dirs: examples
  build-depends: base, wireform-xml, bytestring, text

-- Cross-library bridge: write a Parquet file with wireform-parquet,
-- read it back with the dataframe library, run aggregations.
-- Behind the +dataframe-bridge flag because the dataframe dep tree
-- is large.
executable example-dataframe-bridge
  import: defaults
  main-is: DataFrameBridge.hs
  hs-source-dirs: examples
  if !flag(dataframe-bridge)
    buildable: False
  build-depends:
      base
    , wireform-parquet
    , bytestring
    , text
    , vector
    , directory
    , filepath
    , temporary           >= 1.3 && < 2
    , dataframe           >= 1.0 && < 2

-- Standalone bench executables
executable wireform-bench
  import: defaults
  main-is: Main.hs
  hs-source-dirs: bench
  build-depends: base, wireform-core, wireform-proto, bytestring, text, vector

executable avro-thrift-bench
  import: defaults
  main-is: AvroBench.hs
  ghc-options: -O2
  hs-source-dirs: bench
  build-depends: base, wireform-avro, wireform-thrift, bytestring, containers, text, deepseq, vector

executable all-formats-bench
  import: defaults
  main-is: AllFormatsBench.hs
  ghc-options: -O2
  hs-source-dirs: bench
  build-depends:
      base
    , wireform-proto
    , wireform-avro
    , wireform-thrift
    , wireform-cbor
    , wireform-msgpack
    , wireform-bson
    , wireform-ion
    , wireform-edn
    , wireform-bencode
    , wireform-toml
    , bytestring
    , containers
    , text
    , vector

executable bench-grow
  import: defaults
  main-is: Main.hs
  hs-source-dirs: bench-grow
  build-depends: base, wireform-proto, vector
