cabal-version: 3.0
name: wireform-arrow
version: 0.1.0.0
synopsis: Apache Arrow IPC schema framing and record batch materialization
license: BSD-3-Clause
build-type: Simple

common defaults
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -O2
  default-language: GHC2021
  default-extensions:
    StrictData
    DerivingStrategies
    DeriveGeneric
    DeriveAnyClass
    OverloadedStrings
    LambdaCase

library
  import: defaults
  hs-source-dirs: src
  exposed-modules:
    Arrow.Column
    Arrow.File
    Arrow.FlatBufferIPC
    Arrow.IPC
    Arrow.Stream
    Arrow.Types
    Arrow.Write
  build-depends:
    base >= 4.16 && < 5,
    wireform-core,
    wireform-columnar,
    bytestring >= 0.11 && < 0.13,
    text >= 2.0 && < 2.2,
    vector >= 0.13 && < 0.14,
    primitive >= 0.7 && < 0.10,
    containers >= 0.6 && < 0.8,
    deepseq >= 1.4 && < 1.6

executable wireform-arrow-pyarrow-probe
  import: defaults
  main-is: Probe.hs
  hs-source-dirs: test-probe
  build-depends:
    base >= 4.16 && < 5,
    wireform-arrow,
    bytestring >= 0.11 && < 0.13,
    text >= 2.0 && < 2.2,
    vector >= 0.13 && < 0.14,

test-suite wireform-arrow-test
  import: defaults
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  build-depends:
    base >= 4.16 && < 5,
    wireform-arrow,
    bytestring >= 0.11 && < 0.13,
    text >= 2.0 && < 2.2,
    vector >= 0.13 && < 0.14,
    primitive >= 0.7 && < 0.10
